# PyAimRec

./: LICENSE  README.md  pyproject.toml
PyAimRec/: AimRec.py  AimRecGradient.py  AimRecIntensity.py  CompareGradient.py  GoldenSectionSearch_AReconstruction.py  GoldenSectionSearch_AReconstruction_finiteLoop.py  GoldenSectionSearch_GradientM.py  GoldenSectionSearch_GradientM_finiteLoop.py  Iso_S.py  Iso_gr.py  Maskit.py  Reconstruct_G.py  Reconstruct_I.py  Refine_S.py  Refine_grM.py  SMM.py  S_empty.py  Stemplate2D.py  __init__.py  bestH2D.py  gr2profile.py  gr_empty.py  imCompare.py  map2radial.py  prepGoldenAR_2p2.py  prepGoldenAR_Np.py  prepGolden_2p2.py  prepGolden_Np.py
PyAimRec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: Runme_Aimrec_intensity_2p.py
tests/: BG.mat  Runme_AimRec.py  Runme_AimRec_Multi.py  __init__.py  at000179.tif  at000300.tif  at000547.tif  at000575.tif  im2.tif  multi.tif  multi2.tif  multi3.tif  multi4.tif  multi5.tif
